vlib/v/checker/tests/var_option_map_error.vv
fn main() {
	mut var4 := ?map[string]string{1:1}
}